--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,22 +1,21 @@
 {
-    "lang": "en",
-    "short_name": "Shoop",
-    "name": "Shoop - shopping at your fingertips",
-    "icons": [
-      {
-        "src": "\/assets\/images\/icons\/logo.png",
-        "sizes": "192x192",
-        "type": "image\/png"
-      },
-      {
-        "src": "\/assets\/images\/icons\/logowhite.png",
-        "sizes": "298x296",
-        "type": "image\/png"
-      }
-    ],
-    "start_url": "./",
-    "theme_color": "#3f51b5",
-    "background_color": "#3f51b5",
-    "display": "standalone"
-  }
-  
+  "lang": "en",
+  "short_name": "QR Code Scanner",
+  "name": "QR Code Scanner",
+  "icons": [
+    {
+      "src": "\/assets\/images\/icons\/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image\/png"
+    },
+    {
+      "src": "\/assets\/images\/icons\/android-chrome-256x256.png",
+      "sizes": "256x256",
+      "type": "image\/png"
+    }
+  ],
+  "start_url": "./",
+  "theme_color": "#3f51b5",
+  "background_color": "#3f51b5",
+  "display": "standalone"
+}
