--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,18 +4,18 @@
   "name": "QR Code Scanner",
   "icons": [
     {
-      "src": "\/assets\/images\/icons\/android-chrome-192x192.png",
+      "src": "\/assets\/images\/icons\/favicon.png",
       "sizes": "192x192",
       "type": "image\/png"
     },
     {
-      "src": "\/assets\/images\/icons\/android-chrome-256x256.png",
+      "src": "\/assets\/images\/icons\/favicon.png",
       "sizes": "256x256",
       "type": "image\/png"
     }
   ],
   "start_url": "./",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5",
+  "theme_color": "#5e17eb",
+  "background_color": "#ececec",
   "display": "standalone"
 }
