--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,12 +4,12 @@
   "name": "shoop app for qr code scanning",
   "icons": [
     {
-      "src": "\/assets\/images\/icons\/favicon.png",
+      "src": "\/shoop\/blob\/main\/app\/assets\/images\/icons\/favicon.png",
       "sizes": "192x192",
       "type": "image\/png"
     },
     {
-      "src": "\/assets\/images\/icons\/favicon.png",
+      "src": "\/shoop\/blob\/main\/app\/assets\/images\/icons\/favicon.png",
       "sizes": "256x256",
       "type": "image\/png"
     }
