--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,17 +4,17 @@
   "name": "shoop app for qr code scanning",
   "icons": [
     {
-      "src": "\/shoop\/blob\/main\/app\/assets\/images\/icons\/favicon.png",
+      "src": "https://github.com/efynm1/shoop/blob/main/app/assets/images/icons/favicon.png?raw=true",
       "sizes": "192x192",
       "type": "image\/png"
     },
     {
-      "src": "\/shoop\/blob\/main\/app\/assets\/images\/icons\/favicon.png",
+      "src": "https://github.com/efynm1/shoop/blob/main/app/assets/images/icons/favicon.png?raw=true",
       "sizes": "256x256",
       "type": "image\/png"
     }
   ],
-  "start_url": "./",
+  "start_url": "/app/index.html",
   "theme_color": "#5e17eb",
   "background_color": "#ececec",
   "display": "standalone"
